--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+include/php-google-api-client/vendor/google/auth/tests/fixtures/private.pem
 
 # AWS User-specific
 .idea/**/aws.xml
